--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage" :"https://jasmine-yue/github.io/deploy",
   "scripts": {
     "start": "react-scripts start",
-    "build": "set BUILD_PATH='./docs' && react-scripts build",
+    "build": " set BUILD_PATH='./docs' && react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
