--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage" :"https://jasmine-yue.github.io/deploy",
+  "homepage": "https://jasmine-yue.github.io/deploy",
   "scripts": {
+    "predeploy": " npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": " set BUILD_PATH=./docs && react-scripts build ",
+    "build": " react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
